test/test-cases/negative/const_errors.pas

Program const_errors(input, output);

Const
  b = 1;
  a = b;
  c = 111;
  a = 123;
    12 =
  a;
  e = 10;
  f = 1;
Begin
  read(b);
  For b := 1 To 3 Do
    Begin
      a := 4;
      b := 3;
    End;
End.
